--- a/37294/modelB.html
+++ b/37294/modelB.html
@@ -5,18 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spelling Game</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
     body,
     html {
       height: 100%;
+      margin: 0;
+      font-family: 'Arial', sans-serif;
       display: flex;
-      align-items: center;
       justify-content: center;
-      background: #f4f4f4;
+      align-items: center;
+      background: linear-gradient(45deg, #ff9a9e, #fad0c4, #ffecd2);
     }
 
-    .game-container {
+    .container {
       text-align: center;
       background: white;
       padding: 2rem;
@@ -24,133 +26,179 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
-    .word-text {
+    #welcome-text {
       font-size: 1.5rem;
-      margin: 20px 0;
+      margin-bottom: 20px;
     }
 
-    .start-button,
-    .repeat-button,
-    .restart-button {
-      font-size: 2rem;
-      cursor: pointer;
+    .color-change {
+      animation: colorChange 2s infinite;
     }
 
-    .animated-text span {
-      animation: color-change 3s infinite alternate;
-    }
-
-    @keyframes color-change {
+    @keyframes colorChange {
       0% {
-        color: blue;
+        color: black;
       }
 
       50% {
-        color: red;
+        color: #ff6b6b;
       }
 
       100% {
-        color: green;
+        color: black;
       }
     }
 
-    .option {
-      margin: 10px;
-      padding: 10px;
-      border: 1px solid #ddd;
+    button {
+      background: none;
+      border: 2px solid #4ecdc4;
+      color: #4ecdc4;
+      padding: 10px 20px;
+      font-size: 1rem;
       cursor: pointer;
       border-radius: 5px;
+      transition: all 0.3s;
     }
 
-    .option:hover {
-      background: #eee;
+    button:hover {
+      background: #4ecdc4;
+      color: white;
+    }
+
+    #game-area,
+    #results {
+      display: none;
+    }
+
+    .options button {
+      margin: 5px;
+    }
+
+    .word-list {
+      margin-top: 20px;
+    }
+
+    table {
+      width: 100%;
+      margin-top: 20px;
     }
   </style>
 </head>
 
 <body>
 
-  <div class="game-container" id="welcome" style="display: block;">
-    <h1 class="animated-text">
-      <span>Press</span> <span>the</span> <span>start</span> <span>button</span> <span>below</span> <span>to</span>
-      <span>begin!</span>
-    </h1>
-    <i class="start-button fa fa-play"></i>
+  <div class="container" id="welcome">
+    <h1 id="welcome-text" class="color-change">Press the start button below to begin!</h1>
+    <button id="start-game"><i class="fas fa-play"></i></button>
   </div>
 
-  <div id="game" style="display: none;">
-    <p id="instruction"></p>
-    <div id="wordOptions"></div>
-    <i class="repeat-button fa fa-volume-up" onclick="speakCurrentWord()"></i>
-    <div id="timer">Time left: 60s</div>
+  <div class="container" id="game-area">
+    <div class="time-options">
+      <button data-time="10">10s</button>
+      <button data-time="30">30s</button>
+      <button data-time="60">1min</button>
+    </div>
+    <h2>Click on the correct spelling:</h2>
+    <button id="read-word"><i class="fas fa-volume-up"></i> Read Word</button>
+    <div class="word-list" id="word-options"></div>
   </div>
 
-  <div id="result" style="display: none;">
+  <div class="container" id="results">
     <h2 id="score"></h2>
-    <i class="restart-button fa fa-redo"></i>
+    <table border="1">
+      <tr>
+        <th>Your Choice</th>
+        <th>Correct Word</th>
+      </tr>
+      <tbody id="mistakes"></tbody>
+    </table>
+    <button id="restart">Restart</button>
   </div>
 
   <script>
-    const words = ['heart', 'liver', 'lungs', 'kidney', 'brain'];
-    let currentWord, correctAnswers = 0, totalAnswers = 0, timer;
+    const synth = window.speechSynthesis;
+    let words = [];
+    let currentWord;
+    let correctCount = 0;
+    let totalWords = 0;
+    let mistakes = [];
+
+    // Fetch words from an API (example using a placeholder API)
+    fetch('https://api.example.com/words') // Replace with real API
+      .then(response => response.json())
+      .then(data => {
+        words = data;
+        document.getElementById('welcome').style.display = 'block';
+      });
+
+    document.getElementById('start-game').addEventListener('click', startGame);
 
     function startGame() {
       document.getElementById('welcome').style.display = 'none';
-      document.getElementById('game').style.display = 'block';
-      startTimer();
-      newWord();
+      document.getElementById('game-area').style.display = 'block';
     }
 
-    function newWord() {
+    document.querySelectorAll('.time-options button').forEach(button => {
+      button.addEventListener('click', function () {
+        let time = parseInt(this.getAttribute('data-time'));
+        setupGame(time);
+      });
+    });
+
+    function setupGame(time) {
+      // Here you would set up your game logic, like setting a timer, etc.
+      displayWord();
+    }
+
+    function displayWord() {
       currentWord = words[Math.floor(Math.random() * words.length)];
-      document.getElementById('instruction').innerText = "Click on the correct spelling of:";
-      speakCurrentWord();
-      let options = [currentWord, ...getRandomMisspellings(currentWord, 2)];
-      options.sort(() => Math.random() - 0.5); // Shuffle array
-      document.getElementById('wordOptions').innerHTML = options.map(option => `<div class="option" onclick="checkAnswer('${option}')">${option}</div>`).join('');
+      let options = [currentWord.correct, ...currentWord.wrong];
+      options.sort(() => Math.random() - 0.5); // Shuffle options
+
+      let wordOptionsHTML = options.map(option =>
+        `<button onclick="checkAnswer('${option}')">${option}</button>`
+      ).join('');
+      document.getElementById('word-options').innerHTML = wordOptionsHTML;
     }
 
-    function getRandomMisspellings(word, count) {
-      let misspellings = [];
-      for (let i = 0; i < count; i++) {
-        let misspelled = word.split('').sort(() => 0.5 - Math.random()).join('');
-        if (!misspellings.includes(misspelled) && misspelled !== word) misspellings.push(misspelled);
+    function checkAnswer(choice) {
+      totalWords++;
+      if (choice === currentWord.correct) {
+        correctCount++;
+      } else {
+        mistakes.push({ chosen: choice, correct: currentWord.correct });
       }
-      return misspellings;
+      if (totalWords < 5) { // Example: game ends after 5 words
+        displayWord();
+      } else {
+        showResults();
+      }
     }
 
-    function speakCurrentWord() {
-      let utterance = new SpeechSynthesisUtterance(currentWord);
-      window.speechSynthesis.speak(utterance);
+    function showResults() {
+      document.getElementById('game-area').style.display = 'none';
+      document.getElementById('results').style.display = 'block';
+      document.getElementById('score').textContent = `${correctCount} out of ${totalWords} words you selected were correct.`;
+      let mistakesHTML = mistakes.map(mistake =>
+        `<tr><td>${mistake.chosen}</td><td>${mistake.correct}</td></tr>`
+      ).join('');
+      document.getElementById('mistakes').innerHTML = mistakesHTML;
     }
 
-    function checkAnswer(selected) {
-      totalAnswers++;
-      if (selected === currentWord) correctAnswers++;
-      if (totalAnswers < 5) newWord();
-      else endGame();
-    }
+    document.getElementById('read-word').addEventListener('click', () => {
+      let utterance = new SpeechSynthesisUtterance(currentWord.correct);
+      synth.speak(utterance);
+    });
 
-    function startTimer() {
-      let timeLeft = 60;
-      timer = setInterval(() => {
-        timeLeft--;
-        document.getElementById('timer').innerText = `Time left: ${timeLeft}s`;
-        if (timeLeft <= 0) endGame();
-      }, 1000);
-    }
-
-    function endGame() {
-      clearInterval(timer);
-      document.getElementById('game').style.display = 'none';
-      document.getElementById('result').style.display = 'block';
-      document.getElementById('score').innerText = `${correctAnswers} out of ${totalAnswers} words you selected were correct.`;
-    }
-
-    document.querySelector('.start-button').addEventListener('click', startGame);
-    document.querySelector('.restart-button').addEventListener('click', () => location.reload());
+    document.getElementById('restart').addEventListener('click', () => {
+      correctCount = totalWords = 0;
+      mistakes = [];
+      document.getElementById('results').style.display = 'none';
+      document.getElementById('game-area').style.display = 'block';
+      displayWord();
+    });
   </script>
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
 </body>
 
 </html>
