--- a/29708/modelB.html
+++ b/29708/modelB.html
@@ -22,11 +22,11 @@
     }
 
     .even {
-      color: #2E8B57;
+      color: #000000;
     }
 
     .odd {
-      color: #8B4513;
+      color: #d9d0ca;
     }
 
     button {
