--- a/29813/ideal.html
+++ b/29813/ideal.html
@@ -120,7 +120,7 @@
         if (rat.style.display === 'block') {
           rat.style.display = 'none'; // Hide rat if not hit
         }
-      }, 2000); // Rat appears for 2 seconds
+      }, 2000);
     }
 
     function hitRat(e) {
@@ -131,8 +131,7 @@
         e.target.style.display = 'none';
         misses = 0; // Reset misses on hit
 
-        // Reset no-hit timer every time user hits a rat
-        resetNoHitTimer();
+        resetNoHitTime();
       } else if (e.target.classList.contains('hole')) {
         misses++;
         checkGameOver();
@@ -144,11 +143,11 @@
         clearInterval(gameInterval);
         clearTimeout(noHitTimeout);
         gameOverDisplay.style.display = 'block';
-        gameArea.onclick = null; // Disable clicking after game over
+        gameArea.onclick = null;
       }
     }
 
-    function resetNoHitTimer() {
+    function resetNoHitTime() {
       // restart the 30-second timer
       clearTimeout(noHitTimeout);
       noHitTimeout = setTimeout(() => {
@@ -164,14 +163,14 @@
       scoreDisplay.textContent = 'Score: 0';
       gameOverDisplay.style.display = 'none';
       clearTimeout(noHitTimeout); // Clear previous timeout
-      resetNoHitTimer(); // Start the no-hit timer for the new game
+      resetNoHitTime(); // Start the no-hit timer for the new game
       startGame();
     }
 
     function startGame() {
       gameInterval = setInterval(showRat, 3000); // Show rat every 3 seconds
       gameArea.onclick = hitRat;
-      resetNoHitTimer(); // Start the no-hit timer when game starts
+      resetNoHitTime(); // Start the no-hit timer when game starts
     }
 
     restartButton.onclick = restartGame;
