--- a/29659/ideal.html
+++ b/29659/ideal.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
   <style>
     body {
-      background: rgb(61, 61, 154);
+      background: rgb(39, 39, 109);
       font-family: "Space Grotesk", sans-serif, Arial, sans-serif;
       font-weight: 400;
       font-style: normal;
@@ -65,10 +65,10 @@
       box-shadow: 0 0 8px rgba(33, 33, 34, 0.4);
     }
 
-
     #gameArea {
-      background-color: #fff;
-      color: #000;
+      background: url('https://cdn.pixabay.com/photo/2017/02/15/11/15/wintry-2068298_1280.jpg');
+      color: #444;
+      font-size: 20px;
       height: 50vh;
       width: 800px;
       position: relative;
@@ -91,10 +91,12 @@
       position: absolute;
       bottom: 0;
       left: 25%;
-      width: 80px;
-      height: 80px;
       transition: left 0.3s, width 0.1s;
     }
+
+    /* #dog img {
+      width: 500px;
+    } */
 
     .option {
       width: 40px;
@@ -140,12 +142,13 @@
   <div id="gameArea" style="display:none;">
     <div class="lane" id="lane1"></div>
     <div class="lane" id="lane2"></div>
-    <img id="dog" src='https://random.dog/ae9e4114-a21b-4d6b-8967-f400f80ca5ae.jpg' alt="Dog">
+    <div id="dog">
+      <img src="" alt="Dog">
+    </div>
 
     <div>
       <div class="timer">Time Left: <span id="countdown"></span></div>
-      <div class="score">Current Score: <span id="dogSize">80</span> | High Score: <span id="highScore">0</span>
-      </div>
+      <div class="score">Current Score: <span id="dogSize">80</span> | High Score: <span id="highScore">0</span></div>
     </div>
   </div>
 
@@ -157,15 +160,28 @@
 
   <script>
     const gameArea = document.getElementById('gameArea');
-    const dog = document.getElementById('dog');
+    const dogImg = document.querySelector('#dog img');
     const dogSizeDisplay = document.getElementById('dogSize');
     const countdownDisplay = document.getElementById('countdown');
     let highScore = localStorage.getItem('highScore') || 0;
     let dogSize = 80;
+    let dogWidth = 80;
     let lane = 1;
     let dogLane = 1;
     let gameInterval, fallInterval;
     let timeLeft;
+
+    function dogSvg(size) {
+      return `
+        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="60" version="1.0" viewBox="0 0 1 1">
+          <path fill="#1e1916" d="M.73555824.90496726.73066243.90567084.72594252.90628648l-.004544.00049838-.00433881.0003811-.00422153.00029317-.00401633.0001759-.00386973.00008794H.70122895L.6976817.90760572.694281.9074005.6910269.90710734.6879194.90672623.68492913.90622785.68211478.90567084.67941768.90502589l-.0025505-.0007329L.67443394.90347213.67211795.90256333.66994855.90156657.66786708.9005112.66593221.89936786.6640853.89813658.66235564.89684666.66074326.8954688.65921882.8940323.65781163.89250786.6564924.89092479.65526112.88928307.65411778.88755343.65306241.88576513.65121548.88201266.64966172.87802565.64840113.87380412.64737505.86937737.64658351.8647161l-.000557-.00483718L.64561609.85486584.64535223.84967686.64520566.844312.64517635.83882986.64523497.83320115.6452936.82745518.64541086.82162125.64555746.8096016l.0000293-.00609777L.63916652.66785768l-.0267364.12523888C.60680142.81631502.6004691.83812628.63424138.85571601c.02392205.021137-.00281434.04998414-.02884715.0464662C.52729583.90496726.53855325.85293096.54558915.816315L.54981067.76284224.5624753.65378589.55192146.62634592C.46678715.60453465.40909283.5883521.34365903.55317263L.29722214.55950494C.27541087.56302287.2810396.5876485.27892881.60383106L.27189292.6481865l-.0386974.10061326-.00281435.00841376C.2275668.7642494.2282704.79168938.23812064.80576118l.02110768.04224467c.01547897.02318913.0197005.08229061-.02392203.06329372h.00070359l-.0323651-.0133682C.18042632.88811041.16142942.8240838.15298635.77764691l.00140718-.0661667c-.0204041-.0055994-.02884717.1118707-.0204041.13652563l.0204041.06118294C.16002224.92888929.1368038.9359545.12062123.9359545c-.0379938 0-.05487995-.03872674-.06261943-.07109184L.0523731.84023704C.04252283.80294682.04744796.7459561.06644488.7128874L.0762951.6924833C.09247766.65167513.07137.62282796.06644488.6017203.0502623.5355829.03689412.47155629.08262742.40823326L.08684895.40333744C.0847382.398383.07137.38785848.06363051.36320354.04604078.3069164.03056181.2147462.0523731.2147462L.06714846.21404261c.03658664 0 .0253292.1519753.06965534.14212503L.45341896.3596856.5097061.34423594C.5294066.3385779.54699633.3259133.56528964.31465588L.6018763.29214102C.64268446.3336528.6792711.3596856.73907619.38149685c.01618255.12383172-.00211077.151301-.01758973.22514856L.71585775.63689976C.70389673.68969826.70037878.74454891.70319315.79942887l.00140716.0253292c-.00140717.02603281.01407178.0281729.03447588.0345052.0133682.00700658.02251486.03303938-.00351795.04570399h.00070358-.00070358zM.8031028.14649805.8046859.1476707l.0016417.00117264.00331274.00255052.00342999.0027264.00348863.00290231.00354726.00304889.0035766.00316615.0036352.00328341.00366453.00337137.00366452.00348863.00366452.00351795.00724111.00721179.00354726.0036352.00351795.00363522.00343.0036059.00334204.00360589.02251486.02389272c.01407179.01477537.03588306.0126646.05487996.01688614l.0077395.00070359c.02040407.01128674.01407178.0338016.00703588.05065842L.9473386.301317C.92693452.34983533.86783302.35335328.82561766.33083844L.80732435.32098818H.80099204L.78762385.32943126l-.0260328.02113699C.70671109.3266462.66238495.29847332.62720549.2604795L.70882185.15775548l.02743997-.039401.00562873-.0133682.0063323-.01474606S.77355207.0585494.78832744.0648817c.01477536.00636162.02392204.03377229.0204041.04784407L.80450998.12961191.8031028.14649805h.0007036" font-weight="400"/>
+        </svg>
+      `;
+    }
+
+    function svgToDataUrl(svg) {
+      return `data:image/svg+xml;base64,${btoa(svg)}`;
+    }
 
     function updateHighScore() {
       document.getElementById('highScore').textContent = highScore;
@@ -183,6 +199,7 @@
       gameInterval = setInterval(() => {
         if (timeLeft > 0) {
           timeLeft--;
+          if (dogSize < 20) endGame();
           countdownDisplay.textContent = timeLeft;
         } else {
           endGame();
@@ -199,7 +216,6 @@
         if (Math.random() > 0.5) createOption(1);
         else createOption(2);
 
-        // Increase fall speed
         fallSpeed = Math.min(fallSpeed * fallSpeedMultiplier, maxFallSpeed);
       }, 1000 / fallSpeed);
     }
@@ -244,74 +260,76 @@
     }
 
     function applyEffect(e) {
-      if (e.includes('x')) dogSize *= parseInt(e.slice(1));
-      else if (e.includes('/')) dogSize /= parseInt(e.slice(1));
-      else dogSize += parseInt(e);
+      if (e.includes('x')) {
+        dogSize *= parseInt(e.slice(1));
+        if (dogWidth < 200) dogWidth += 5
+      }
+      else if (e.includes('/')) {
+        dogSize /= parseInt(e.slice(1));
+        dogWidth -= 5
+      }
+      else if (e.includes('-')) {
+        dogSize += parseInt(e);
+        if (dogWidth < 200) dogWidth -= 5
+      }
+      else if (e.includes('+')) {
+        dogSize += parseInt(e);
+        if (dogWidth < 200) dogWidth += 5
+      }
 
       updateDogSize();
     }
 
     function updateDogSize() {
-      const currentWidth = parseInt(dog.style.width);
-
-      if (dogSize < 200 || dogSize < currentWidth) {
-        dog.style.width = dogSize + 'px';
-      }
-      dogSizeDisplay.textContent = dogSize;
-
-      if (dogSize <= 20) {
-        endGame();
-      }
+      dogSizeDisplay.textContent = Math.floor(dogSize);
+      dogImg.src = svgToDataUrl(dogSvg(dogSize));
+      dogImg.style.width = dogWidth + 'px'
     }
 
     function moveDog(direction) {
       if (direction === 'left' && dogLane === 2) {
         dogLane = 1;
-        dog.style.left = '25%';
+        dogImg.parentElement.style.left = '25%';
       } else if (direction === 'right' && dogLane === 1) {
         dogLane = 2;
-        dog.style.left = '75%';
+        dogImg.parentElement.style.left = '75%';
       }
     }
+
+    document.addEventListener('keydown', function (event) {
+      if (event.key === 'ArrowLeft') {
+        moveDog('left');
+      } else if (event.key === 'ArrowRight') {
+        moveDog('right');
+      }
+    });
 
     function endGame() {
       clearInterval(gameInterval);
       clearInterval(fallInterval);
 
-      gameArea.style.display = 'none';
-      document.getElementById('restartBtn').style.display = 'block';
-      document.getElementById('gameOver').style.display = 'block';
-      document.getElementById('finalScore').textContent = dogSize; // Show final score
+      document.getElementById('finalScore').textContent = dogSize;
 
       if (dogSize > highScore) {
         highScore = dogSize;
         localStorage.setItem('highScore', highScore);
         updateHighScore();
       }
+
+      document.getElementById('gameOver').style.display = 'block';
+      gameArea.style.display = 'none';
     }
 
     function restartGame() {
-      clearInterval(gameInterval);
-      clearInterval(fallInterval);
-
-      dogSize = 80;
-      lane = 1;
-
-      document.getElementById('restartBtn').style.display = 'none';
       document.getElementById('gameOver').style.display = 'none';
-
+      dogSize = 80;
+      document.getElementById('welcomeScreen').style.display = 'block';
       updateDogSize();
-      startGame();
     }
 
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'ArrowLeft') moveDog('left');
-      else if (e.key === 'ArrowRight') moveDog('right');
-    });
-
+    updateDogSize();
     updateHighScore();
   </script>
-
 </body>
 
 </html>
